# battlesnake-hungry

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.cpp  move_comparator.cpp  move_comparator.h  render_graphs.sh  snake_hungry.cpp  snake_hungry.h  snake_hungry_test.cpp
docs/: backstory.md  basic_rules.md  build_run.md  design.md  path_to_food_bfs.md  project_structure.md  unit_tests.md  whats_next.md
docs/graphs/: bfs_graph_order.dot  bfs_intermediate_state.dot  bfs_tree_order.dot  board_graph.dot  board_graph_occupied.dot
